removal of nav bar and footer

--- a/themes/demo/layouts/default.htm
+++ b/themes/demo/layouts/default.htm
@@ -21,7 +21,7 @@ description = "Default layout"
         <header id="layout-header">
 
             <!-- Nav -->
-            <nav id="layout-nav" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+            <!-- <nav id="layout-nav" class="navbar navbar-inverse navbar-fixed-top" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-main-collapse">
@@ -40,7 +40,7 @@ description = "Default layout"
                         </ul>
                     </div>
                 </div>
-            </nav>
+            </nav> -->
 
         </header>
 
@@ -50,9 +50,9 @@ description = "Default layout"
         </section>
 
         <!-- Footer -->
-        <footer id="layout-footer">
+        <!-- <footer id="layout-footer">
             {% partial "footer" %}
-        </footer>
+        </footer> -->
 
         <!-- Scripts -->
         <script src="{{ [
