--- a/modules/backend/layouts/_footer.htm
+++ b/modules/backend/layouts/_footer.htm
@@ -1,9 +1,9 @@
 <footer id="layout-footer">
-    <!-- <div class="brand">
+    <div class="brand">
         <span class="logo"><i class="icon-leaf"></i></span>
         <span class="name"><?= e(trans('system::lang.app.name')) ?></span>
     </div>
     <div class="tagline">
         <p><?= e(trans('system::lang.app.tagline')) ?></p>
-    </div> -->
+    </div>
 </footer>
