--- a/themes/demo/layouts/login.htm
+++ b/themes/demo/layouts/login.htm
@@ -1,4 +1,4 @@
-description = "Default layout"
+description = "Signin layout"
 ==
 <!DOCTYPE html>
 <html>
@@ -8,19 +8,9 @@ description = "Default layout"
         <div id="container">
 
             {% partial "nav" %}
+            {% page %}
 
-
-            <section class="accent-colour-1">
-            </section>
-                   
-            <section class="accent-colour-2">
-            </section>
-            
-            <section>
-            </section>
         </div>
-
-        {% partial "footer" %}
 
 
 
