Corrected the nav links

--- a/themes/demo/partials/nav.htm
+++ b/themes/demo/partials/nav.htm
@@ -1,10 +1,10 @@
 <div id="banner">
-    <a href="signin.html">Sign In</a>
+    <a href="login">Sign In</a>
 </div>
 <nav>
     <ul>
         <li>
-            <a href="home.htm">Home</a>
+            <a href="home">Home</a>
         </li>               
         <li>
             <a href="about.html">About Us</a>
