--- a/themes/pimp/src/styles/base/_reset.scss
+++ b/themes/pimp/src/styles/base/_reset.scss
@@ -1,3 +1,7 @@
+/* =================================
+   BASE / RESET
+   ================================= */
+
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0b1 | 201101 
    NOTE: WORK IN PROGRESS
