--- a/themes/pimp/src/styles/base/_colours.scss
+++ b/themes/pimp/src/styles/base/_colours.scss
@@ -21,11 +21,12 @@ $grey: #c8c7c7;
 // Text
 $colr-txt: $white;
 $colr-txt-dropdown: $purple;
+$colr-txt-accent: $purple;
 // Button - all the same for: submit, signup and Continue (join)
 $colr-btn-signin: $pink;
 $colr-btn: $purple;
 // Panel for each section and banner for top
-$colr-bnr: $purple;
+$colr-pnl-header: $purple;
 $colr-pnl-hero: $pink;
 $colr-pnl-marketing: $purple;
 $colr-pnl-causes: $mustard;
@@ -34,7 +35,7 @@ $colr-pnl-summary: $white;
 $colr-pnl-talkabout: $purple;
 $colr-pnl-contactus: $grey;
 $colr-pnl-signup: $pink;
-$colr-footer: $white;
+$colr-pnl-footer: $white;
 // Hero Panel
 $colr-hero-tile: $green;
 $colr-hero-tile2: $mustard;
