--- a/themes/pimp/src/styles/layout/_header.scss
+++ b/themes/pimp/src/styles/layout/_header.scss
@@ -1,3 +1,15 @@
 /* =================================
    LAYOUT / HEADER
    ================================= */
+
+
+.pnl-header {
+    background-color: $colr-pnl-header;  
+    .nav {
+            ul {
+                 li a {
+                color: $colr-txt;    
+                }   
+            }
+    }
+}
