--- a/themes/pimp/src/styles/layout/_footer.scss
+++ b/themes/pimp/src/styles/layout/_footer.scss
@@ -1,3 +1,7 @@
 /* =================================
    LAYOUT / FOOTER
    ================================= */
+
+.pnl-footer {
+    background-color: $colr-pnl-footer;
+}
