Navigation added for both off canvas mobile and desktop size with responsive settings and styling for both navs. Logo images were added to the assets file for the navigation. Foundation 5 variable settings were modifed via the _settings.scss partial.

--- a/themes/pimp/src/styles/base/_colours.scss
+++ b/themes/pimp/src/styles/base/_colours.scss
@@ -25,6 +25,8 @@ $colr-txt-accent: $purple;
 // Button - all the same for: submit, signup and Continue (join)
 $colr-btn-signin: $pink;
 $colr-btn: $purple;
+// Mobile off canvas menu
+$colr-mob-menu: $purple;
 // Panel for each section and banner for top
 $colr-pnl-header: $purple;
 $colr-pnl-hero: $pink;
