--- a/themes/pimp/src/pages/includes/head.html
+++ b/themes/pimp/src/pages/includes/head.html
@@ -2,6 +2,10 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pimp Foundation</title>
+    <!-- fonts -->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <!-- style sheet -->
     <link href="styles/styles.css" text="text/css" rel="stylesheet"> 
 
 
