--- a/themes/pimp/src/pages/includes/header.html
+++ b/themes/pimp/src/pages/includes/header.html
@@ -1,14 +1,24 @@
 <div class="off-canvas-wrap" data-offcanvas>
     <div class="inner-wrap">
         <header class="row pnl-header">
+            
 
-            <!-- Off Canvas Mobile Navigation -->
+            <!-- MOBILE NAVIGATION - Off Canvas -->
 
             <nav class="tab-bar hide-for-medium-up">
+                
+                <!-- logo -->
+                <section class="left">
+                    <!-- <img src="img/logo-mobile-mustard.png"/>-->
+                    <img class="logo-mob" src="img/logo.png"/>
+                </section>
+                    
+                <!-- hamburger -->
                 <section class="right-small">
-                    <!-- hamburger icon style to appear left side of the page -->
+                    <!-- hamburger icon style to appear right side of the page -->
                     <a class="right-off-canvas-toggle menu-icon"><span></span></a>
                 </section>
+                
             </nav>
             <aside class="right-off-canvas-menu">
                 <ul class="off-canvas-list">
@@ -41,51 +51,84 @@
                     <li><a href="#">Contact Us</a></li>
                 </ul>   
             </aside>
+            <!-- get rid of the menu when done -->
             <a class="exit-off-canvas"></a>
               
 
-            <!-- top bar code -->
+            <!-- TOP BAR NAVIGATION - DESKTOP -->
             
-            <nav class="top-bar show-for-medium-up" data-topbar>
-                <ul class="title-area">
-                    <li class="name">
-                        <h1><a href="#">Pimp My Cause</a></h1>
-                    </li>
-                    <!-- hamburger icon -->
-                    <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
-                </ul>
-                <section class="top-bar-section">
-                    <ul class="right">
-                        <li class="has-dropdown"><a href="#">About Us</a>
-                            <ul class="dropdown">
-                                <li><a href="#">Meet The Team</a></li>
-                                <li><a href="#">How It Works</a></li>
-                                <li><a href="#">Advice For Marketers</a></li>
-                                <li><a href="#">Advice For Causes</a></li>
-                                <li><a href="#">Partner With Us</a></li>
-                                <li><a href="#">Challenges</a></li>
-                            </ul>
-                        </li>
-                        <li class="has-dropdown"><a href="#">Find a Cause</a>
-                            <ul class="dropdown">
-                                <li><a href="#">Cause Profiles</a></li>
-                                <li><a href="#">Help Wanted Ads</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Find a Marketer</a></li>
-                        <li><a href="#">Partners</a></li>
-                        <li class="has-dropdown"><a href="#">Blog</a>
-                            <ul class="dropdown">
-                                <li><a href="#">Forum</a></li>
-                                <li><a href="#">Twitter Help Desk</a></li>
-                                <li><a href="#">Expert Interviews</a></li>
-                                <li><a href="#">Hall of Fame</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">Contact Us</a></li>
-                    </ul>
-                </section>
-            </nav> 
+                <div class="row header-row-position-relative">
+
+                    <!-- Logo -->
+                    <div class="large-2 columns show-for-medium-up header-column-position-static">
+                        <img class="logo vertical-align-center" src="img/logo.png"/>
+                    </div> <!-- end large-2 -->
+                
+
+                    <!-- Navigation -->
+                    <div class="large-8 medium-12 columns header-column-position-static">
+
+                        <nav class="top-bar show-for-medium-up vertical-align-center" data-topbar>
+                            <section class="top-bar-section">
+                                <ul>
+                                    <li class="has-dropdown"><a href="#">About Us</a>
+                                        <ul class="dropdown">
+                                            <li><a href="#">Meet The Team</a></li>
+                                            <li><a href="#">How It Works</a></li>
+                                            <li><a href="#">Advice For Marketers</a></li>
+                                            <li><a href="#">Advice For Causes</a></li>
+                                            <li><a href="#">Partner With Us</a></li>
+                                            <li><a href="#">Challenges</a></li>
+                                        </ul>
+                                    </li>
+                                    <li class="has-dropdown"><a href="#">Find a Cause</a>
+                                        <ul class="dropdown">
+                                            <li><a href="#">Cause Profiles</a></li>
+                                            <li><a href="#">Help Wanted Ads</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">Find a Marketer</a></li>
+                                    <li><a href="#">Partners</a></li>
+                                    <li class="has-dropdown"><a href="#">Blog</a>
+                                        <ul class="dropdown">
+                                            <li><a href="#">Forum</a></li>
+                                            <li><a href="#">Twitter Help Desk</a></li>
+                                            <li><a href="#">Expert Interviews</a></li>
+                                            <li><a href="#">Hall of Fame</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">Contact Us</a></li>
+                                </ul>
+                            </section>
+                        </nav>    
+                    </div> <!-- end large-8 -->
+
+                
+                    <!-- Sign-in/Register -->
+                    <div class="large-2 columns show-for-medium-up">
+
+                            <!-- social icons -->
+                            <div class="header-social-icons">
+                                <a href="https://www.linkedin.com/company/pimp-my-cause"><i class="fa fa-linkedin-square"></i></a>
+                                <a href="https://www.facebook.com/PimpMyCause/"><i class="fa fa-facebook"></i></a>
+                                <a href="https://twitter.com/pimpmycause"><i class="fa fa-twitter"></i></a>
+                            </div>
+                            
+                            <!-- Sign in button -->
+                            <div class="header-sign-in">
+                                <a href="#" class="button round">Sign in</a>
+                            </div>
+                            
+                            <!-- Not registered link -->
+                            <div class="header-register">
+                                <a href="#">Not registered</a>
+                            </div>
+                            
+<!--                        </div>-->
+                    </div> <!-- end large-2 -->
+                
+            </div> <!-- end row desktop view top nav -->
+            
         </header>
     <!-- div for inner-wrap has been placed in a the mobile-menu-end.html as needs to be closed end of the page -->
 <!-- div for off-canvas-wrap has been placed in a partial as needs to be closed at the end of the page -->
