--- a/themes/pimp/src/styles/layout/_nav.scss
+++ b/themes/pimp/src/styles/layout/_nav.scss
@@ -1,3 +1,42 @@
 /* =================================
    LAYOUT / NAV
    ================================= */
+
+
+//change properties for horizontal secondary menu
+.top-bar-section {
+//    .has-dropdown {
+//        position: static;
+//    }
+//    .dropdown  {
+//        li {
+//            width: auto;
+//        }
+//    }
+}
+
+.dropdown, .top-bar-section, .off-canvas-list {
+    li {
+        a {
+            &:hover {
+                font-weight: bold;
+                color: $colr-txt;
+            } 
+        }  
+    }
+}
+
+ul.off-canvas-list {
+    
+    > li {
+        
+        > a {
+            border-top: 1px ridge $colr-txt; 
+            border-bottom: 1px ridge $colr-txt;
+        }
+        
+        > a:last-child {
+            border-bottom: none;
+        }
+    }
+}
