--- a/themes/pimp/assets/styles/styles.css
+++ b/themes/pimp/assets/styles/styles.css
@@ -7458,6 +7458,30 @@ th.hide-for-touch {
    COMPONENTS / DROPDOWN
    ================================= */
 /* =================================
+   COMPONENTS / TILES
+   ================================= */
+.tile-row {
+  overflow: hidden; }
+
+.tile-wrapper {
+  width: 50%;
+  height: 0;
+  padding-top: 50%;
+  float: left;
+  background: green;
+  position: relative; }
+
+.tile {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  overflow: hidden; }
+  .tile img {
+    height: 100%; }
+
+/* =================================
    LAYOUT / FOOTER
    ================================= */
 .pnl-footer {
