--- a/themes/pimp/src/styles/main.scss
+++ b/themes/pimp/src/styles/main.scss
@@ -23,6 +23,7 @@
 @import "components/buttons";
 @import "components/carousel";
 @import "components/dropdown";
+@import "components/tiles";
 
 
 @import "layout/footer";
