--- a/themes/pimp/src/styles/base/_colours.scss
+++ b/themes/pimp/src/styles/base/_colours.scss
@@ -16,12 +16,15 @@ $mustard: #d7be01;
 // 215 190 1
 $grey: #c8c7c7;
 // 200 199 199
+$aluminium: #dbdbdb;
+// 219 219 219
 
 
 // Text
 $colr-txt: $white;
 $colr-txt-dropdown: $purple;
 $colr-txt-accent: $purple;
+$colr-txt-menu-item: $aluminium;
 // Button - all the same for: submit, signup and Continue (join)
 $colr-btn-signin: $pink;
 $colr-btn: $purple;
