--- a/themes/pimp/src/styles/layout/_header.scss
+++ b/themes/pimp/src/styles/layout/_header.scss
@@ -3,7 +3,7 @@
    ================================= */
 
 
-.pnl-header {
+.pnl-header, #pnl-header-colr-extend {
     background-color: $colr-pnl-header;  
 }
 
