--- a/src/styles/layout/_header.scss
+++ b/src/styles/layout/_header.scss
@@ -3,7 +3,7 @@
    ================================= */
 
 
-.pnl-header, #pnl-header-colr-extend {
+.pnl-header, #pnl-header-colr-to-edge {
     background-color: $colr-pnl-header;  
 }
 
