--- a/src/pages/includes/head.html
+++ b/src/pages/includes/head.html
@@ -8,12 +8,12 @@
     <!-- style sheet -->
     <link href="styles/styles.css" text="text/css" rel="stylesheet"> 
 
-
     <!-- content delivery network to serve modernizr from Cloudflare's network  -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+    
     <!-- local file fallback -->
     <script type='text/javascript'>
-      window.Modernizr || document.write('<script src="scripts/vendor/modernizr.min.js">\x3C/script>')
+      window.Modernizr || document.write('<script src="scripts/vendor/modernizr.js">\x3C/script>')
     </script>
 
 </head>
