--- a/src/pages/includes/header.html
+++ b/src/pages/includes/header.html
@@ -1,6 +1,6 @@
 <div class="off-canvas-wrap" data-offcanvas>
     <div class="inner-wrap">
-        <div id="pnl-header-colr-extend">
+        <div id="pnl-header-colr-to-edge">
             <header class="row pnl-header">
 
 
